api renaming, pointed out initial token amount
